--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,17 @@
 	.animation-delay-300 {
 		animation-delay: 300ms;
 	}
+
+	/* Hide number input spinners */
+	input[type="number"]::-webkit-outer-spin-button,
+	input[type="number"]::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+
+	input[type="number"] {
+		-moz-appearance: textfield;
+	}
 }
 
 /* Reduced motion support */
